--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.11.7",
     "next": "14.2.14",
+    "next-extra": "^0.5.1",
     "photography_website": "file:",
     "react": "^18.3.1",
     "react-dom": "^18",
